--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # PASTAS
+\__pycache__
+\build
+\dist
+\logs
 \baixados
 \temp
-\__pycache__
 \venv
 
 # ARQUIVOS
@@ -10,6 +13,7 @@
 *.png
 *.jpg
 *.jpeg
+*.spec
 
 # TERMOS / PARTES DE NOMES DE ARQUIVOS
 relat*
